--- a/ebank_frontend/src/app/navbar/navbar.component.html
+++ b/ebank_frontend/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/customers">Search Customer</a></li>
-            <li><a class="dropdown-item" href="#">Add Customer</a></li>
+            <li><a class="dropdown-item" routerLink="/new-customer">Add Customer</a></li>
           </ul>
         </li>
         <li class="nav-item">
