l'ajout de l'intercepteur

--- a/ebank_frontend/src/app/navbar/navbar.component.html
+++ b/ebank_frontend/src/app/navbar/navbar.component.html
@@ -14,12 +14,12 @@
             Customers
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" routerLink="/customers">Search Customer</a></li>
-            <li><a class="dropdown-item" routerLink="/new-customer">Add Customer</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/customers">Search Customer</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/new-customer">Add Customer</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/accounts">Accounts</a>
+          <a class="nav-link" routerLink="/admin/accounts">Accounts</a>
         </li>
       </ul>
       <form class="d-flex">
