--- a/ebank_frontend/src/app/accounts/accounts.component.html
+++ b/ebank_frontend/src/app/accounts/accounts.component.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-     <div class="col col-md-6">
+     <div class="col col-md-6" *ngIf="authService.roles.includes('ADMIN')">
       <div class="card" *ngIf="accountObservable">
         <div class="card-header">Operations</div>
         <div class="card-body">
