--- a/ebank_frontend/src/app/not-authorized/not-authorized.component.html
+++ b/ebank_frontend/src/app/not-authorized/not-authorized.component.html
@@ -1,4 +1,6 @@
-<div class="not-authorized-container">
-    <h1>403 - Not Authorized</h1>
-    <p>You do not have permission to access this page.</p>
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
+    <div class="card p-5 shadow">
+        <h1 class="text-danger mb-3">403 - Not Authorized</h1>
+        <p class="mb-0">You do not have permission to access this page.</p>
+    </div>
 </div>
