--- a/ebank_frontend/src/app/login/login.component.html
+++ b/ebank_frontend/src/app/login/login.component.html
@@ -1,18 +1,24 @@
-<div class="p-3">
-  <div class="card">
-    <div class="card-header">Authentication</div>
-    <div class="card-body">
-      <form [formGroup]="formLogin" (ngSubmit)="handleLogin()">
-        <div class="mb-3">
-          <label class="form-label">Username</label>
-          <input type="text" class="form-control" formControlName="username">
+<div class="container min-vh-100 d-flex align-items-center justify-content-center bg-light">
+  <div class="row w-100 justify-content-center">
+    <div class="col-md-6 col-lg-4">
+      <div class="card shadow-lg border-0">
+        <div class="card-header text-center bg-primary text-white fs-4 fw-bold">
+          Authentication
         </div>
-        <div class="mb-3">
-          <label class="form-label">Password</label>
-          <input type="password" class="form-control" formControlName="password">
+        <div class="card-body p-4">
+          <form [formGroup]="formLogin" (ngSubmit)="handleLogin()">
+            <div class="mb-3">
+              <label class="form-label">Username</label>
+              <input type="text" class="form-control" formControlName="username" placeholder="Enter your username">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Password</label>
+              <input type="password" class="form-control" formControlName="password" placeholder="Enter your password">
+            </div>
+            <button type="submit" class="btn btn-success w-100 fw-bold">Login</button>
+          </form>
         </div>
-        <button class="bt btn-success">Login</button>
-      </form>
+      </div>
     </div>
   </div>
 </div>
