--- a/ebank_frontend/src/app/navbar/navbar.component.html
+++ b/ebank_frontend/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Digital banking</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand fw-bold" href="#">Digital Banking</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,25 +11,29 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Customers
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/admin/customers">Search Customer</a></li>
-            <li *ngIf = "authService.roles.includes('ADMIN')"><a class="dropdown-item" routerLink="/admin/new-customer">Add Customer</a></li>
+            <li *ngIf="authService.roles.includes('ADMIN')">
+              <a class="dropdown-item" routerLink="/admin/new-customer">Add Customer</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/admin/accounts">Accounts</a>
         </li>
       </ul>
-      <ul class="navbar">
-      <li class="nav-item" *ngIf = "authService.isAuthenticated==true">
-        <a class="nav-link" >{{this.authService.username}}</a>
-        
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
+        <li class="nav-item" *ngIf="authService.isAuthenticated">
+          <span class="navbar-text me-2">
+            {{ authService.username }}
+          </span>
         </li>
-        <li class="nav-item">
-          <button (click)="handleLogout()">logout</button>
+        <li class="nav-item" *ngIf="authService.isAuthenticated">
+          <button class="btn btn-outline-danger btn-sm" (click)="handleLogout()">Logout</button>
         </li>
       </ul>
     </div>
